fix word wrap in post titles and archive entries

--- a/.vitepress/theme/styles/index.css
+++ b/.vitepress/theme/styles/index.css
@@ -74,4 +74,9 @@
     text-emphasis: filled;
     text-emphasis-position: under left;
   }
+
+  /* TODO: tailwind next version */
+  .text-wrap {
+    text-wrap: pretty;
+  }
 }
